--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;400;700&display=swap');
-*{}
-body{}
+
 .budget-tracker{
     border-collapse: collapse;
     min-width: 750px;
+    line-height: 2em;
+    margin: 0 auto;
 }
 .budget-tracker * {
     font-family: 'Kanit', sans-serif;
 }
 .budget-tracker th{
     text-align: left;
-    padding: 10px 20px;
+    padding: 5px 20px;
     border-bottom: 2px solid #009578;
+}
+.input,
+.delete-entry{
+    height: 30px;
+    font: 13px;
+    padding: 0 10px;
+    margin: 0;
+    box-sizing: border-box;
+}
+.input{
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    outline: none;
+}
+
+.input:focus{
+    border-color: #bbb;
+}
+.delete-entry{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    background: none;
+    color: red;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+}
+.delete-entry:hover{
+    background: rgba(255, 0, 0, 0.1);
+}
+
+.controls,
+.summary{
+    text-align: right;
 }
